traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:8: error: not found: value directio
    if (getDirection==directio.EAST) {gauche;
                      ^